--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/MathieuLaureti/UHACK-2025#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.2",
     "ts-node": "^10.9.2",
